# flat-combining

./: .clang-format  .clang-tidy  .cmake-format.json  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: SanitizerFlags.cmake  WarningFlags.cmake
include/flat-combining/: flat-combining.h  function_ptr.h
src/: CMakeLists.txt  flatcombining.cpp
test/: CMakeLists.txt  test_flat_combining.cpp  test_function_ptr.cpp
